--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Track Python scripts and Jupyter notebooks
 !*.py
 !*.ipynb
-
+#Track the readme 
+!*readme.md
 # Always track this .gitignore file
 !.gitignore
